cleaning up the used template

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+<!-- google font css -->
+<link href='http://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
+
+
+
 </head>
 
 <body data-spy="scroll" data-offset="0" data-target="#navbar-main">
@@ -38,10 +46,10 @@
         <a class="navbar-brand" href="#home">Folajimi 0 Adekoya</a> </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#Home" class="smoothScroll">Home</a></li>
-          <li> <a href="#About" class="smoothScroll">Creative writing</a></li>
-          <li> <a href="#Services" class="smoothScroll"> Testing Stories</a></li>
-          <li> <a href="#Portfolio" class="smoothScroll"> Fun stuff</a></li>
+          <li><a href="#headerwrap" class="smoothScroll">Home</a></li>
+          <li> <a href="#stories" class="smoothScroll">Short stories</a></li>
+          <li> <a href="#testing" class="smoothScroll"> Testing Stories</a></li>
+          <li> <a href="#funstuff" class="smoothScroll"> Fun stuff</a></li>
           <li> <a href="#contact" class="smoothScroll"> Contact</a></li>
         </ul>
       </div>
@@ -56,11 +64,9 @@
     <h1>Folajimi O Adekoya</h1>
     <h2>Quality assurance of everything(from humans to software).</h2>
     <h2>Fiction writer and media critic</h2>
-  <ul>
-    <li>Meet people anywhere - from your conference room</li>
-    <li>Just a tap to start a video conference (yes, literally)</li>
-    <li>Get recognized just by walking into a room</li>
-  </ul>
+
+    <h3>student of cinema</h3>
+
     <!--<a href="#portfolio" class="smoothScroll btn btn-lg">See Our Works</a> </header>-->
   <div>
 
@@ -69,32 +75,27 @@
 </div>
 <!-- /headerwrap --> 
 
-<!-- ==== ABOUT ==== -->
-<div id="about" name="about">
+<!-- ==== Short stories ==== -->
+<div id="stories" name="stories">
   <div class="container">
     <div class="row white">
-      <h2 class="centered">Tap the potential of remote collaboration</h2>
+      <h2 class="centered">Short Stories</h2>
       <hr>
-      <!--<div class="col-md-6"> <img class="img-responsive" src="assets/img/about/about1.jpg" align=""> </div>
-      <div class="col-md-6"> -->
-        <h3>Tap the button - and you are in the meeting with remote colleagues, partners or customers. </h3>
-        <h3>Tap it again to end the meeting. That easy.</h3>
+        <h4><a href="https://folajimia.wordpress.com/category/stories/">Collection of short stories</a></h4>
       </div>
     </div>
-    <!-- row --> 
   </div>
 </div>
-<!-- container --> 
 
-<!-- ==== SERVICES ==== -->
-<div id="services" name="services">
+
+<!-- ==== TESTING ==== -->
+<div id="testing" name="testing">
   <div class="container">
     <div class="row">
-      <h2 class="centered">No hassle, only magic</h2>
+      <h2 class="centered">Software testing rants</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2">
-        <p class="large">large">Walk into a room with your smartphone or laptop - MeetBox will see you, greet you and suggest to start a meeting from your calendar.</p>
-        <p class="large">No juggling with AV cables, inputs, outputs, parameters... It just works.</p>
+        <h5><a href="https://folajimia.wordpress.com/category/tester/">Software testing stories</a></h5>
       </div>
 
 
@@ -106,19 +107,22 @@
 </div>
 <!-- container --> 
 
-<!-- ==== PORTFOLIO ==== -->
-<div id="portfolio" name="portfolio">
+<!-- ==== FUNSTUFF ==== -->
+<div id="funstuff" name="funstuff">
   <div class="container">
     <div class="row">
-      <h2 class="centered">Connect with people who are remote</h2>
+      <h2 class="centered">Fun Stuff</h2>
       <hr>
       <div class="col-lg-8 col-lg-offset-2 centered">
-        <p class="large">To join a conversation, open a link associated with a conference room (e.g. meetbox.io/room-name) or with a personal employee meeting space (e.g. meetbox.io/john).</p>
-
-        <p class="large">MeetBox doesn’t require any software downloads for those who join remotely from the lapop and runs in the browser. Mobile attendees can get an app to join.</p>
-        <p class="large">OS: Windows, Mac, Linux</p>
-        <p class="large">Supported browsers (desktop): Chrome, Firefox, Internet Explorer, Safari, Opera.</p>
-        <p class="large">Mobile apps: OS, Android</p>
+        <ul>
+          <li>Attempts at coding</li>
+          <li>Automation experiments</li>
+          <li>Raspberry PI</li>
+          <li>Mobile automation</li>
+          <li>What i think</li>
+          <li>tutorials</li>
+          <li>links for my memory</li>
+        </ul>
       </div>
     </div>
 
@@ -126,36 +130,23 @@
 </div>
 <!-- /container --> 
 
-<!-- ==== TEAM MEMBERS ==== -->
-<div id="team" name="team">
+<!-- ==== contact ==== -->
+<div id="contact" name="contact">
   <div class="container">
     <div class="row centered">
-      <h2 class="centered">What do I need to use MeetBox in my office?</h2>
+      <h2 class="centered">Get in touch</h2>
       <hr>
 
       <div class="col-lg-8 col-lg-offset-2 centered">
-        <p class="large">MeetBox connects to a TV display in your conference room via HDMI and it’s just a plug-and-go setup. No sophisticated knowledge required - just order boxes to your remote offices and barely any person can get it running.</p>
+        <p class="large">I am not boring and i dont bite.</p>
       </div>
+
+      <h6>Mail me @ folajimia@gmail.com</h6>
 
 
 
       <!-- Begin MailChimp Signup Form -->
-      <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-      <style type="text/css">
-        #mc_embed_signup{background:#f5f5f5; clear:left; font:14px Helvetica,Arial,sans-serif; }
-        /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-      </style>
-      <div id="mc_embed_signup">
-        <form action="//meetbox.us10.list-manage.com/subscribe/post?u=d120429830f3003388c021fe8&amp;id=7104dee955" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll">
-            <label for="mce-EMAIL">Notify me when shipping starts</label>
-            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;"><input type="text" name="b_d120429830f3003388c021fe8_7104dee955" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-          </div>
-        </form>
+
       </div>
 
       <!--End mc_embed_signup-->
@@ -175,12 +166,11 @@
 <div id="footerwrap">
   <div class="container">
     <div class="row">
-      <div class="col-md-8"> <span class="copyright">Copyright &copy; 2015 Meetbox </span> </div>
+      <div class="col-md-8"> <span class="copyright">Copyright &copy; 2015 JimiSoft </span> </div>
       <div class="col-md-4">
         <ul class="list-inline social-buttons">
           <li><a href="#"><i class="fa fa-twitter"></i></a> </li>
-          <li><a href="#"><i class="fa fa-facebook"></i></a> </li>
-          <li><a href="#"><i class="fa fa-google-plus"></i></a> </li>
+
           <li><a href="#"><i class="fa fa-linkedin"></i></a> </li>
         </ul>
       </div>
