--- a/index.html
+++ b/index.html
@@ -169,9 +169,8 @@
       <div class="col-md-8"> <span class="copyright">Copyright &copy; 2015 JimiSoft </span> </div>
       <div class="col-md-4">
         <ul class="list-inline social-buttons">
-          <li><a href="#"><i class="fa fa-twitter"></i></a> </li>
-
-          <li><a href="#"><i class="fa fa-linkedin"></i></a> </li>
+          <li><a href="https://twitter.com/folajimia"><i class="fa fa-twitter"></i></a> </li>
+          <li><a href="dk.linkedin.com/in/folajimia"><i class="fa fa-linkedin"></i></a> </li>
         </ul>
       </div>
     </div>
