--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="col-md-4">
         <ul class="list-inline social-buttons">
           <li><a href="https://twitter.com/folajimia"><i class="fa fa-twitter"></i></a> </li>
-          <li><a href="dk.linkedin.com/in/folajimia"><i class="fa fa-linkedin"></i></a> </li>
+          <li><a href="https://dk.linkedin.com/in/folajimia"><i class="fa fa-linkedin"></i></a> </li>
         </ul>
       </div>
     </div>
