just changed some text

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
     <h1>Folajimi O. Adekoya</h1>
     <h2>Quality assurance of everything(from humans to software).</h2>
-    <h2>Fiction writer and media critic</h2>
-    <h3>student of cinema</h3>  
+    <h2>I test things</h2>
+    <h3>i write stories</h3>  
 </div>
     
     
