--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <li>Mobile automation</li>
           <li>What i think</li>
           <li>tutorials</li>
-          <li>links for my memory</li>
+          <li><a href="https://github.com/folajimia/Links-for-memory/blob/master/README.md">links for my memory</a></li>
         </ul>
       </div>
     </div>
