--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         <ul>
           <li><a href="https://github.com/folajimia">Attempts at coding</a></li>
           <li>Automation experiments</li>
+           <li><a href="https://github.com/folajimia/AfricanProverbs">Alexa skills for echo</a></li>
           <li>Raspberry PI</li>
           <li>Mobile automation</li>
           <li>What i think</li>
