--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <hr>
         <ul>
           <li><a href="https://github.com/folajimia">Attempts at coding</a></li>
-          <li><a href=""https://github.com/folajimia/Photonaijatestframework">Automation experiments</li>
+          <li><a href=""https://github.com/folajimia/Photonaijatestframework">Automation experiments</a></li>
            <li><a href="https://github.com/folajimia/AfricanProverbs">Alexa skills for echo</a></li>
           <li>Raspberry PI</li>
           <li>Mobile automation</li>
